--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -47,53 +47,8 @@
                     <hpl:HyperlinkLabel Grid.Row="3" x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" Clicked="PrivacyPolicy_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />
 
-                    <!--<Label Grid.Row="1" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{x:Static resources:Properties.Resources.Vision}" >
-                                    <Span.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.VisionLink}"/>
-                                    </Span.GestureRecognizers>
-                                </Span>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label Grid.Row="2" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{x:Static resources:Properties.Resources.TermsConditions}">
-                                    <Span.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.Accuracy_disclaimerLink}"/>
-                                    </Span.GestureRecognizers>
-                                </Span>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label Grid.Row="3" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" >
-                                    <Span.GestureRecognizers>
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.PrivacyPolicyLInk}"/>
-                                    </Span.GestureRecognizers>
-                                </Span>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>
-                    <Label Grid.Row="4" Margin="5,0,0,0" Grid.ColumnSpan="2">
-                        <Label.FormattedText>
-                            <FormattedString>
-                                <Span Text="{x:Static resources:Properties.Resources.CookiesPolicy}" >
-                                    <Span.GestureRecognizers>
-                                        --><!--<TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="https://destopesto.gr/info/cookies_policy"/>--><!--
-                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding TapCommand}" CommandParameter="{x:Static resources:Properties.Resources.CookiesPolicyLInk}"/>
-                                    </Span.GestureRecognizers>
-                                </Span>
-                            </FormattedString>
-                        </Label.FormattedText>
-                    </Label>-->
-                    <Image Grid.Row="5" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
-                    <Label Grid.Row="5" Grid.Column="1" Text="{Binding AppVersion}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
+                    <Image Grid.Row="5" BackgroundColor="White" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
+                    <Label Grid.Row="5" BackgroundColor="White" Grid.Column="1" Text="{Binding AppVersion}" TextColor="{extensions:AppMode Color=TextDefault}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
                 </Grid>
             </ContentView>
         </DataTemplate>
