--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -39,14 +39,14 @@
                     <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText2}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
 
                 </StackLayout>
-                <Frame Grid.Row="2" Grid.Column="1"  BackgroundColor="Transparent"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
+                <Frame Grid.Row="2" Grid.Column="1"  BackgroundColor="{extensions:AppMode Color=Background}"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
 
                     <StackLayout Orientation="Horizontal">
                         <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">
                             <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
                         </Frame>
 
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" >
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" TextColor="{extensions:AppMode Color=TextRevert}"  >
                             <Entry.Behaviors>
                                 <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                     <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -57,7 +57,7 @@
                         </Entry>
                     </StackLayout>
                 </Frame>
-                <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" />
+                <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=Text}" />
                 <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
             </Grid>
         </StackLayout>
