--- a/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
+++ b/DestoPesto/DestoPesto/Views/ForgotPasswordPage.xaml
@@ -18,19 +18,21 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        <StackLayout>
-            <Grid>
+        
+            <Grid BackgroundColor="White">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="1*"/>
+                    <RowDefinition Height="2*"/>
                     <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="8*"/>
                     <ColumnDefinition Width="*"/>
+
                 </Grid.ColumnDefinitions>
 
                 <StackLayout Grid.Row="1" Grid.Column="1" Orientation="Vertical" >
@@ -39,14 +41,14 @@
                     <Label Text="{x:Static resources:Properties.Resources.ForgotPasswordPageText2}" TextColor="#0D6EFD" HorizontalOptions="StartAndExpand" FontSize="Header"/>
 
                 </StackLayout>
-                <Frame Grid.Row="2" Grid.Column="1"  BackgroundColor="{extensions:AppMode Color=Background}"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
+                <Frame Grid.Row="2" Grid.Column="1" BackgroundColor="White" VerticalOptions="Start"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6" >
 
                     <StackLayout Orientation="Horizontal">
-                        <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5">
+                        <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White" >
                             <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
                         </Frame>
 
-                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" TextColor="{extensions:AppMode Color=TextRevert}"  >
+                        <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" BackgroundColor="White"  TextColor="Black"  >
                             <Entry.Behaviors>
                                 <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                     <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -60,6 +62,6 @@
                 <Label Grid.Row="3" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ForgotPasswordPage}" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" TextColor="{extensions:AppMode Color=Text}" />
                 <Button Grid.Row="4" Grid.Column="1"  Text="{x:Static resources:Properties.Resources.ResetPassword}" x:Name="btnReset" Clicked="Reset_password_Tapped"  BackgroundColor="#0D6EFD" TextColor="White" CornerRadius="6" TextTransform="None"  />
             </Grid>
-        </StackLayout>
+        
     </ContentPage.Content>
 </ContentPage>
