--- a/DestoPesto/DestoPesto/Views/SignInPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignInPage.xaml
@@ -18,7 +18,7 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid>
+        <Grid BackgroundColor="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="10*" />
@@ -47,13 +47,13 @@
 
                 <StackLayout Padding="0" Margin="15,10" >
 
-                    <Frame BackgroundColor="{extensions:AppMode Color=Background}"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                    <Frame BackgroundColor="White"  Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
                         <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5" BorderColor="{extensions:AppMode Color=Background}">
+                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White">
                                 <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" Aspect="AspectFill" Margin="0" />
                             </Frame>
 
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" Keyboard="Email" TextColor="{extensions:AppMode Color=TextRevert}" >
+                            <Entry TextColor="Black" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" HorizontalOptions="FillAndExpand" BackgroundColor="White" Keyboard="Email"  >
                                 <Entry.Behaviors>
                                     <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                         <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -70,12 +70,12 @@
                     </StackLayout>
 
 
-                    <Frame BackgroundColor="{extensions:AppMode Color=Background}"   Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                    <Frame BackgroundColor="White"   Margin="0,15,0,0" Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
                         <StackLayout Orientation="Horizontal">
-                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">
+                            <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5" BackgroundColor="White" >
                                 <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" Aspect="AspectFill" Margin="0"/>
                             </Frame>
-                            <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True"   HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
+                            <Entry TextColor="Black" Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}"  x:Name="txtPassword" IsPassword="True" BackgroundColor="White"  HorizontalOptions="FillAndExpand" TextChanged="txtPassword_TextChanged">
                                 <Entry.Behaviors>
                                     <xct:TextValidationBehavior x:Name="PasswordValidator"  DecorationFlags="Trim" MinimumLength="1" Flags="ValidateOnValueChanging"/>
                                 </Entry.Behaviors>
