--- a/DestoPesto/DestoPesto/Views/SignupPage.xaml
+++ b/DestoPesto/DestoPesto/Views/SignupPage.xaml
@@ -29,15 +29,15 @@
         </Grid>
     </Shell.TitleView>
     <ContentPage.Content>
-        <Grid >
+        <Grid BackgroundColor="White">
             <Grid.RowDefinitions>
-                <RowDefinition Height="*"/>
-                <RowDefinition Height="10*" />
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="1*"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="3*"/>
 
             </Grid.RowDefinitions>
             <!--<Image Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" BackgroundColor="#0D6EFD"  />-->
-            <StackLayout Grid.Row="1" VerticalOptions="Center">
+            <StackLayout Grid.Row="1" VerticalOptions="Center" Padding="0,10,0,0">
                 <!--<Image Source="{AppThemeBinding Light=login_header.png, Dark=login_header.png}"  />-->
 
                 <!--<Frame  BackgroundColor="White" >-->
@@ -59,14 +59,14 @@
                         </StackLayout>
                     </Grid>
                     <StackLayout Padding="0" Margin="15,10">
-                        <Frame BackgroundColor="{extensions:AppMode Color=Background}"    Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <Frame BackgroundColor="White"    Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
                             <StackLayout Orientation="Horizontal">
-                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0" Margin="5">
+                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  BackgroundColor="White"  CornerRadius="6" Padding="0" Margin="5">
                                     <Image Source="{extensions:ImageResource DestoPesto.Images.email.png}" />
                                 </Frame>
 
 
-                                <Entry Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" Keyboard="Email" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                <Entry BackgroundColor="White" TextColor="Black" Placeholder="{x:Static resources:Properties.Resources.EmailPlaceHolder}" x:Name="txtEmail" Keyboard="Email" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                     <Entry.Behaviors>
                                         <xct:MultiValidationBehavior x:Name="EmailMultiValidator" InvalidStyle="{StaticResource  InvalidEntryStyle}"  Flags="ValidateOnValueChanging">
                                             <xct:EmailValidationBehavior x:Name="EmailValidator" DecorationFlags="Trim" />
@@ -78,12 +78,12 @@
                         </Frame>
 
 
-                        <Frame BackgroundColor="{extensions:AppMode Color=Background}"    Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <Frame BackgroundColor="White"     Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
                             <StackLayout Orientation="Horizontal">
-                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
+                                <Frame BackgroundColor="White"   HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
                                     <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
                                 </Frame>
-                                <Entry Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                <Entry TextColor="Black" BackgroundColor="White"   Placeholder="{x:Static resources:Properties.Resources.PasswordPlaceHolder}" x:Name="txtPassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                     <Entry.Behaviors>
                                         <xct:TextValidationBehavior x:Name="PasswordValidator" MinimumLength="6" InvalidStyle="{StaticResource InvalidEntryStyle}"  Flags="ValidateOnValueChanging"/>
                                     </Entry.Behaviors>
@@ -91,12 +91,12 @@
                             </StackLayout>
                         </Frame>
 
-                        <Frame BackgroundColor="{extensions:AppMode Color=Background}"    Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <Frame BackgroundColor="White"     Padding="0" HorizontalOptions="FillAndExpand" CornerRadius="6">
                             <StackLayout Orientation="Horizontal">
-                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
+                                <Frame BackgroundColor="White"  HeightRequest="40" WidthRequest="40" HasShadow="False"   CornerRadius="6" Padding="0"  Margin="5">
                                     <Image Source="{extensions:ImageResource DestoPesto.Images.password.png}" />
                                 </Frame>
-                                <Entry Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                <Entry TextColor="Black" BackgroundColor="White"  Placeholder="{x:Static resources:Properties.Resources.RePasswordPlaceHolder}" x:Name="txtReTypePassword"  IsPassword="True" HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                     <Entry.Behaviors>
                                         <xct:RequiredStringValidationBehavior x:Name="RePasswordValidator" InvalidStyle="{StaticResource InvalidEntryStyle}"   RequiredString="{Binding Source={x:Reference txtPassword}, Path=Text}" Flags="ValidateOnValueChanging"/>
                                     </Entry.Behaviors>
@@ -104,13 +104,13 @@
                             </StackLayout>
                         </Frame>
 
-                        <Frame BackgroundColor="{extensions:AppMode Color=Background}"    Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
+                        <Frame BackgroundColor="White"    Padding="0"  HorizontalOptions="FillAndExpand" CornerRadius="6">
                             <StackLayout Orientation="Horizontal">
-                                <Frame HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0"  Margin="5">
+                                <Frame BackgroundColor="White"  HeightRequest="40" WidthRequest="40" HasShadow="False"  CornerRadius="6" Padding="0"  Margin="5">
                                     <Image Source="{extensions:ImageResource DestoPesto.Images.user.png}" />
                                 </Frame>
 
-                                <Entry Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
+                                <Entry TextColor="Black" BackgroundColor="White"  Placeholder="{x:Static resources:Properties.Resources.UserNameText}" x:Name="txtDOB"  HorizontalOptions="FillAndExpand" TextChanged="txt_TextChanged">
                                     <Entry.Behaviors >
                                         <xct:TextValidationBehavior x:Name="UserValidator" MinimumLength="1"/>
                                     </Entry.Behaviors>
