--- a/DestoPesto/DestoPesto/Views/AboutPage.xaml
+++ b/DestoPesto/DestoPesto/Views/AboutPage.xaml
@@ -61,7 +61,7 @@
             </ContentView>
             <!--<Image Source="logoback.png" HeightRequest="30"  Margin="10,0,0,0" VerticalOptions="EndAndExpand"  AbsoluteLayout.LayoutBounds="0.8, 0.02, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>-->
         </AbsoluteLayout>
-        <Grid Grid.Row="0" Padding="5">
+        <!--<Grid Grid.Row="0" Padding="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
                 <RowDefinition Height="*"/>
@@ -74,7 +74,7 @@
             </Grid.ColumnDefinitions>
             <Button Opacity="0.5" Text="My"></Button> 
             <Button Grid.Column="1" Opacity="0.5" Text="All"></Button>
-        </Grid>
+        </Grid>-->
 
         <AbsoluteLayout IsVisible="{Binding BrowserIsVisible}" Grid.Row="0">
             <ContentView  
