--- a/DestoPesto/DestoPesto/AppShell.xaml
+++ b/DestoPesto/DestoPesto/AppShell.xaml
@@ -50,6 +50,8 @@
                     <hpl:HyperlinkLabel Grid.Row="2"  x:Name="disclaimer" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.TermsConditions}" Clicked="disclaimer_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="3" x:Name="PrivacyPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.PrivacyPolicy}" Clicked="PrivacyPolicy_Clicked" />
                     <hpl:HyperlinkLabel Grid.Row="4" x:Name="CookiesPolicy" Grid.ColumnSpan="2" Text="{x:Static resources:Properties.Resources.CookiesPolicy}" Clicked="CookiesPolicy_Clicked" />
+                    
+                    
 
                     <Image Grid.Row="5" BackgroundColor="White" Source="{extensions:ImageResource DestoPesto.Images.logoback.png}" HorizontalOptions="Start" VerticalOptions="CenterAndExpand" HeightRequest="30" Margin="5,5,5,5"/>
                     <Label Grid.Row="5" BackgroundColor="White" Grid.Column="1" Text="{Binding AppVersion}" TextColor="{extensions:AppMode Color=TextDefault}" VerticalTextAlignment="Center"  HorizontalTextAlignment="End" Margin="5,5,5,5"/>
@@ -155,7 +157,9 @@
     <MenuItem Text="{x:Static resources:Properties.Resources.DeleteAccountText}" IconImageSource="delete_user.png" StyleClass="MenuItemLayoutStyle" Clicked="MenuItem_Clicked"></MenuItem>
     <MenuItem Text="{x:Static resources:Properties.Resources.LogoutItemText}" IconImageSource="logout.png" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked"></MenuItem>
 
+    <MenuItem x:Name="UserProfile" Text="{x:Static resources:Properties.Resources.UserProfile}" IconImageSource="logout.png" StyleClass="MenuItemLayoutStyle" Clicked="UserProfile_Clicked"></MenuItem>
 
+    
 
 
 
