--- a/DestoPesto/DestoPesto/Views/AboutPage.xaml
+++ b/DestoPesto/DestoPesto/Views/AboutPage.xaml
@@ -13,14 +13,16 @@
     </ContentPage.BindingContext>
 -->
 
-    <Shell.TitleView>
-        <Grid InputTransparent="True"   VerticalOptions="Center">
+    <Shell.TitleView >
+        <StackLayout HorizontalOptions="FillAndExpand">
+        <Grid InputTransparent="True"   VerticalOptions="Center" >
 
             <Image HorizontalOptions="Start" InputTransparent="True" Source="{extensions:ImageResource DestoPesto.Images.logo_landscape_blue_back.png}" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All" />
 
         </Grid>
+            
 
-
+        </StackLayout>
 
         <!--<Image HeightRequest="32" WidthRequest="80"  HorizontalOptions="Start" InputTransparent="True" Source="logo_landscape_blue_back.png" VerticalOptions="Center" AbsoluteLayout.LayoutFlags="All"/>-->
     </Shell.TitleView>
@@ -41,7 +43,11 @@
             <Color x:Key="Ok">#215f21</Color>
         </ResourceDictionary>
     </ContentPage.Resources>
-    <Grid x:Name="GridMain">
+    <StackLayout VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand">
+        <Grid x:Name="ContestLabel" IsVisible="false" BackgroundColor="#039ece">
+            <Label FontSize="Subtitle" x:Name="ScrollingText" TextColor="White">Liakos</Label>
+        </Grid>
+    <Grid VerticalOptions="FillAndExpand" HorizontalOptions="FillAndExpand" x:Name="GridMain">
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
@@ -50,17 +56,22 @@
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
 
-        <AbsoluteLayout IsVisible="{Binding MapIsVisible}" Grid.Row="0">
-            <ContentView  x:Name="MapContent"
+        <Grid HorizontalOptions="FillAndExpand" VerticalOptions="FillAndExpand" >
+
+            <AbsoluteLayout IsVisible="{Binding MapIsVisible}" Grid.Row="0">
+
+                <ContentView Margin="0,0,0,0"  x:Name="MapContent"
                AbsoluteLayout.LayoutBounds="0,0,1,1"
                AbsoluteLayout.LayoutFlags="All" 
                HorizontalOptions="FillAndExpand"
                VerticalOptions="FillAndExpand" >
-                <!--<map:MapEx IsVisible="{Binding MapIsVisible}" x:Name="map" MapClicked="map_MapClicked"  HasScrollEnabled="True" MapType="Street" HasZoomEnabled="True" IsShowingUser="true" PropertyChanged="map_PropertyChangedAsync"></map:MapEx>-->
+                    <!--<map:MapEx IsVisible="{Binding MapIsVisible}" x:Name="map" MapClicked="map_MapClicked"  HasScrollEnabled="True" MapType="Street" HasZoomEnabled="True" IsShowingUser="true" PropertyChanged="map_PropertyChangedAsync"></map:MapEx>-->
 
-            </ContentView>
-            <!--<Image Source="logoback.png" HeightRequest="30"  Margin="10,0,0,0" VerticalOptions="EndAndExpand"  AbsoluteLayout.LayoutBounds="0.8, 0.02, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>-->
-        </AbsoluteLayout>
+                </ContentView>
+
+                <!--<Image Source="logoback.png" HeightRequest="30"  Margin="10,0,0,0" VerticalOptions="EndAndExpand"  AbsoluteLayout.LayoutBounds="0.8, 0.02, AutoSize, AutoSize" AbsoluteLayout.LayoutFlags="PositionProportional"/>-->
+            </AbsoluteLayout>
+        </Grid>
         <Grid Grid.Row="0" VerticalOptions="Start" HorizontalOptions="Start" Padding="5,5,0,0" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="40"/>
@@ -68,7 +79,7 @@
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="60" />
-                
+
                 <ColumnDefinition Width="60" />
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
@@ -95,5 +106,8 @@
         <ScrollView Grid.Row="1">
             <Grid   x:Name="GridBtn" BackgroundColor="White"></Grid>
         </ScrollView>
+
     </Grid>
+
+    </StackLayout>
 </ContentPage>
